Estandarización de btn

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -40,8 +40,8 @@
 		<br>
 	</div>
 </div>
-	<%= f.submit orden, :id => 'botonCRUD', :class => 'btn btn-lg' %>
-	<%= link_to 'Volver', events_path, :id => "botonCRUD", :class => "btn btn-lg"%>
+	<%= f.submit orden, :class => 'btn btn-lg btnCRUD' %>
+	<%= link_to 'Volver', events_path, :class => "btn btn-lg btnCRUD"%>
 <% end %>
 
 
