--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-	<%= link_to 'Nuevo evento', new_event_path , :id => "botonCRUD", :class => "btn btn-lg"%>
+	<%= link_to 'Nuevo evento', new_event_path, :class => "btn btn-lg btnCRUD"%>
 <% end %>
 <div  class="panel panel-default panelRease">
 	<div class="panel-heading">
