--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -28,5 +28,5 @@
 		</div>
 	</div>	
 </div>
-	<%= f.submit "Agregar", :id=>"boton", :class=>"btn btn-lg" %>
+	<%= f.submit "Agregar", :class=>"btn btn-lg" %>
 <% end %>
