--- a/app/views/institutions/edit.html.erb
+++ b/app/views/institutions/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form', {orden: "Editar"} %>
 
-<%= link_to 'Mostrar', @institution,:id=>"boton", :class =>"btn btn-lg" %> |
-<%= link_to 'Volver', institutions_path,:id=>"boton", :class =>"btn btn-lg" %>
+<%= link_to 'Mostrar', @institution, :class =>"btn btn-lg" %> |
+<%= link_to 'Volver', institutions_path, :class =>"btn btn-lg" %>
