--- a/app/views/institutions/new.html.erb
+++ b/app/views/institutions/new.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form', {orden: "Agregar"} %>
 
-<%= link_to 'volver', institutions_path, :id=>"boton", :class =>"btn btn-lg" %>
+<%= link_to 'volver', institutions_path, :class =>"btn btn-lg" %>
 
