--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -14,5 +14,5 @@
 
 
 
-<%= link_to 'Editar', edit_institution_path(@institution),:id=>"boton", :class =>"btn btn-lg" %>
-<%= link_to 'Volver', institutions_path,:id=>"boton", :class =>"btn btn-lg" %>
+<%= link_to 'Editar', edit_institution_path(@institution), :class =>"btn btn-lg" %>
+<%= link_to 'Volver', institutions_path, :class =>"btn btn-lg" %>
