--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -39,8 +39,8 @@
 		<br>
 	</div>
 </div>
-    <%= f.submit accion, :id => 'botonCRUD', :class => 'btn btn-lg' %>
-    <%= link_to 'Volver', offerings_path, :id => "botonCRUD", :class => "btn btn-lg"%>
+    <%= f.submit accion, :class => 'btn btn-lg btnCRUD' %>
+    <%= link_to 'Volver', offerings_path, :class => "btn btn-lg btnCRUD"%>
 
 <% end %>
 
