--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'Nueva oferta', new_offering_path, :id => "botonCRUD", :class => "btn btn-lg" %>
+<%= link_to 'Nueva oferta', new_offering_path, :class => "btn btn-lg btnCRUD" %>
