--- a/app/views/presentation/contacto.html.erb
+++ b/app/views/presentation/contacto.html.erb
@@ -35,10 +35,10 @@
 					<br>
 					<textarea class="form-control" rows=6 placeholder="Ingrese aquí su Comentario..." name="coment" required></textarea>
 					<br>
-					<button id="boton" name="enviar" class="btn btn-default" input type="submit" value="Send">
+					<button id="btn" name="enviar" class="btn btn-default" input type="submit" value="Send">
 					</span> Envíar</a>
 					</button>
-					<button id="boton" name="borrar" class="btn btn-default" input type="reset" value="Reset">
+					<button id="btn" name="borrar" class="btn btn-default" input type="reset" value="Reset">
 					</span> Borrar</a>
 				</form>
 			</div>
