--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -37,4 +37,4 @@
   </tbody>
 </table>
 
-<%= link_to "Nueva solicitud", new_request_path, :class => 'btn btn-lg',:id => 'boton' %>
+<%= link_to "Nueva solicitud", new_request_path, :class => 'btn btn-lg', %>
