--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -25,7 +25,7 @@
 			<br>
 
 			<div class="field"> 
-				<%= f.submit "Crear", :id => 'botonCRUD', :class => 'btn btn-lg' %>
+				<%= f.submit "Crear", :class => 'btn btn-lg btnCRUD' %>
 			</div>
 		<%end%>
 	</div> 
