--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,7 +8,7 @@
   </div>
   <br>
   <div class="actions">
-    <%= f.submit "Recuperar contraseña",:id => 'boton', :class => 'btn btn-lg btn-block' %>
+    <%= f.submit "Recuperar contraseña", :class => 'btn btn-lg btn-block' %>
   </div>
 	 <!--%= render "devise/shared/links" %-->
 <% end %>
