--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,10 +24,10 @@
 
 <% if user_signed_in? %>
 	<% if @event.user.id == current_user.id %>
-		<%= link_to 'Editar ', edit_event_path(@event), :id => "botonCRUD", :class => "btn btn-lg" %>
-		<%= link_to 'Eliminar', @event, method: :delete, data: { confirm: '¿Está seguro de eliminar el evento?' }, :id => "botonCRUD", :class => "btn btn-lg" %>
+		<%= link_to 'Editar ', edit_event_path(@event), :class => "btn btn-lg btnCRUD" %>
+		<%= link_to 'Eliminar', @event, method: :delete, data: { confirm: '¿Está seguro de eliminar el evento?' }, :class => "btn btn-lg btnCRUD" %>
 	<% end %>
 <% end %>
 	
-	<%= link_to 'Volver', events_path, :id => "botonCRUD", :class => "btn btn-lg" %>
+	<%= link_to 'Volver', events_path, :class => "btn btn-lg btnCRUD" %>
 	
