--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -11,10 +11,10 @@
         <h2>Logo institucional</h2> <%= image_tag institution.logo.url(:mini) %>
       </div>
       <div class="panel-footer">
-          <%= link_to 'Editar', edit_institution_path(institution), :id=>"boton", :class=>"btn btn-lg btn-block" %>
-          <%= link_to 'Eliminar', institution, method: :delete, data: { confirm: '¿Seguro que desea eliminar la institución?' } , :id=>"boton", :class=>"btn btn-lg btn-block" %>
+          <%= link_to 'Editar', edit_institution_path(institution), :class=>"btn btn-lg btn-block" %>
+          <%= link_to 'Eliminar', institution, method: :delete, data: { confirm: '¿Seguro que desea eliminar la institución?' } , :class=>"btn btn-lg" %>
       </div>
     </div>
   </div>
 <% end %>
-<p><%= link_to 'Agregar institution', new_institution_path, :id=>"botonAdmin", :class=>"btn btn-lg" %></p>
+<p><%= link_to 'Agregar institution', new_institution_path, :class=>"btn btn-lg btnAdmin" %></p>
