--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,7 +22,7 @@
 	</div>
 </div>
 
-<% if user_signed_in? %>
+<% if user_signed_in? && current_user.category == 1  %>
 	<% if @event.user.id == current_user.id %>
 		<%= link_to 'Editar ', edit_event_path(@event), :class => "btn btn-lg btnCRUD" %>
 		<%= link_to 'Eliminar', @event, method: :delete, data: { confirm: '¿Está seguro de eliminar el evento?' }, :class => "btn btn-lg btnCRUD" %>
