--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
 	<footer>
 		<!--Pie de página-->
 		<div  id="pies" class = "navbar-default ">
-			REASE - Red Nacional de Aprendizaje y Servicio<br>
+			REASE - Red Nacional de Aprendizaje y Servicio
 			Contacto: reasechile@gmail.com
 		</div>
 	</footer>
