--- a/app/views/presentation/contacto.html.erb
+++ b/app/views/presentation/contacto.html.erb
@@ -18,7 +18,7 @@
 		<h1>Contacto</h1>
 		<p>
 			Si quieres unirte a nuestra organización, tienes sugerencias que hacer o simplemente tienes interés y quieres saber más sobre Aprendizaje y Servicio, por favor no dudes en enviar un correo a nuestro mail: reasechile@gmail.com.
-			<br>¡ Muchas gracias !<br>
+			¡ Muchas gracias !
 		</p>
 
 		<div id="panelComentario" class="panel panel-default panelRease">	
@@ -28,13 +28,13 @@
 			<div class="panel-body">
 				<form  method="post" action="send.php">
 					<input class="form-control" type="text" placeholder="Nombre (Obligatorio)" name="nombre" required>
-					<br>
+					
 					<input class="form-control" type="email" placeholder="Correo Electrónico (Obligatorio)" name="correo" required>
-					<br>
+					
 					<input class="form-control" type="text" placeholder="Página Web" name="web">
-					<br>
+					
 					<textarea class="form-control" rows=6 placeholder="Ingrese aquí su Comentario..." name="coment" required></textarea>
-					<br>
+					
 					<button id="btn" name="enviar" class="btn btn-default" input type="submit" value="Send">
 					</span> Envíar</a>
 					</button>
@@ -47,7 +47,7 @@
 		<footer>
 			<!--Pie de página-->
 			<div  id="pies" class = "navbar-default ">
-					REASE - Red Nacional de Aprendizaje y Servicio<br>
+					REASE - Red Nacional de Aprendizaje y Servicio
 					Contacto: reasechile@gmail.com
 			</div>
 		</footer>
