--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -76,8 +76,8 @@
 			</div>
 		
 			<div class="actions">
-				<%= f.submit "Aceptar y Enviar Fomulario",:id => 'btnCRUD', :class => 'btn btn-lg '%>
-				<%= link_to "Salir", root_path,:id => 'btnCRUD', :class => 'btn btn-lg ' %>
+				<%= f.submit "Aceptar y Enviar Fomulario", :class => 'btn btn-lg btnCRUD'%>
+				<%= link_to "Salir", root_path, :class => 'btn btn-lg btnCRUD' %>
 			</div>
 
 		</div>
