--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? && current_user.category == 1  %>
 	<%= link_to 'Nuevo evento', new_event_path, :class => "btn btn-lg btnCRUD" %>
 <% end %>
-
+	<%= link_to 'Mostrar eventos', events_listado_path ,:class => "btn btn-lg btnCRUD" %>
 <div  class="panel panel-default panelRease">
 	<div class="panel-heading">
 		Calendario de eventos
