--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -19,24 +19,27 @@
 		<div class="field">
 			<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo'%>
 		</div>
-		<br>
+		
 		<div class="field">
 			<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic" %>
 		</div>
-		<br>
+		
 		<div class="field">
-			<%= f.text_field :status,:class => 'form-control', :placeholder => 'Titulo' %>
+			<% if accion == "Actualizar" %>
+				<%= f.select(:status, [['Disponible', 'Disponible'],['En proceso', 'En proceso'],['Realizado','Realizado'], ['Cancelado','Cancelado'], ['Caducado', 'Caducado']], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
+			<% else %>
+				<p><b>Estado: </b> Disponible </p>
+			<% end %>
 		</div>
-		<br>
 		<div class="field">
-			<p><%= f.label :start_time, "Fecha de inicio" %><br>
+			<p><%= f.label :start_time, "Fecha de inicio" %>
 			<%= f.datetime_select :start_time %></p>
 		</div>
 		<div class="field">
-			<p><%= f.label :end_time, "Fecha de término" %><br>
+			<p><%= f.label :end_time, "Fecha de término" %>
 			<%= f.datetime_select :end_time %></p>
 		</div>
-		<br>
+		
 	</div>
 </div>
     <%= f.submit accion, :class => 'btn btn-lg btnCRUD' %>
