--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -11,9 +11,9 @@
     <h1> Información </h1>
       <p><b>Estado: </b><%= @offering.status %></p>
 
-      <p><b>Fecha y hora de inicio: </b><%= @offering.start_time.day %>/<%= @offering.start_time.month %>/<%= @offering.start_time.year %> <%= @offering.start_time.hour%>:<%= @offering.start_time.min%></p>
+      <p><b>Fecha y hora de inicio: </b><%=l @offering.start_time %></p>
 
-      <p><b>Fecha y hora de término: </b><%= @offering.end_time.day %>/<%= @offering.end_time.month %>/<%= @offering.end_time.year %> <%= @offering.end_time.hour%>:<%= @offering.end_time.min%></p>
+      <p><b>Fecha y hora de término: </b><%=l @offering.end_time %></p>
   </div>
   <div class="panel-footer">
     <p><b>Creado por:</b>
