--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,40 +1,21 @@
-<%- model_class = Request -%>
+<h1>Solicitudes de servicio</h1>
 
-<div class="page-header">
-  <h1>Solicitudes de servicio</h1>
-</div>
 
-<table class="table table-striped" id="tablaSolicitud">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @requests.each do |request| %>
-      <tr>
-        <td><%= link_to request.id, request_path(request) %></td>
-        <td><%= request.title %></td>
-        <td><%= request.description %></td>
-        <td><%= request.user_id %></td>
-        <td><%=l request.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_request_path(request), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      request_path(request),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% if current_user.category != 2 %>
+	<%= link_to "Nueva solicitud de servicio", new_request_path, :class => 'btn btn-lg' %>
+<%end%>
 
-<%= link_to "Nueva solicitud", new_request_path, :class => 'btn btn-lg' %>
+<% @requests.each do |request| %>
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			<%= request.title %>
+		</div>
+		<div class="panel-body">
+			<%=raw request.description %>
+		</div>
+		<div class="panel-footer">
+			<p><b>Creador:</b> <%= request.user.name %> <%= request.user.last_name %><p>
+			<%= link_to "Ver solicitud", request %>
+		</div>
+	</div>
+<%end%>
