--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,33 +1,28 @@
 <div class="panel panel-default panelRease" >
-  <div class="panel-heading">
-    <%= @request.title %>
-  </div>
-  
-  <div class="panel-body">
+	<div class="panel-heading">
+		<%= @request.title %>
+	</div>
 
-    <h1>Descripción:</h1>
-      <p><%=raw @request.description %></p>
+	<div class="panel-body">
+		<h2>Descripción:</h2>
+		<p><%=raw @request.description %></p>
 
-    <h1> Información </h1>
-    <p><b>Estado: </b> 
-
-  </div>
-  <div class="panel-footer">
-    <p><b>Creado por:</b>
-      <%= @request.user.name %> <%= @request.user.last_name %></p>
-  </div>
+		<h2> Información </h2>
+		<p><b>Estado: </b> 
+	</div>
+	
+	<div class="panel-footer">
+		<p><b>Creado por:</b>
+		<%= @request.user.name %> <%= @request.user.last_name %></p>
+	</div>
 </div>
 
 <% if user_signed_in? %>
-  <% if @request.user.id == current_user.id %>
-    <%= link_to 'Editar ', edit_request_path(@request), :id => "btnCRUD", :class => "btn btn-lg" %>
-  <%= link_to t('Eliminar'),
-              request_path(@request),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => '¿Está seguro de eliminar la solicitud?')) },
-              :id => "btnCRUD", :class => "btn btn-lg"%>
-  <% end %>
+	<% if @request.user.id == current_user.id %>
+		<%= link_to 'Editar ', edit_request_path(@request), :class => "btn btn-lg btnCRUD" %>
+		<%= link_to t('Eliminar'), request_path(@request),:method => 'delete',
+		:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => '¿Está seguro de eliminar la solicitud?')) }, :class => "btn btn-lg btnCRUD"%>
+	<% end %>
 <% end %>
-  
-  <%= link_to 'Volver', requests_path, :id => "btnCRUD", :class => "btn btn-lg" %>
-  
+	
+	<%= link_to 'Volver', requests_path, :class => "btn btn-lg btnCRUD" %>
