--- a/app/views/institutions/edit.html.erb
+++ b/app/views/institutions/edit.html.erb
@@ -1,4 +1,3 @@
-<%= render 'form', {orden: "Editar"} %>
+<h1> Editar institución </h1>
 
-<%= link_to 'Mostrar', @institution, :class =>"btn btn-lg" %> |
-<%= link_to 'Volver', institutions_path, :class =>"btn btn-lg" %>
+<%= render 'form', {orden: "Editar"} %>
