Se agrega campo a la migracion events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,7 @@
 
 		<h1> Información </h1>
 		<p><b>Dirección: </b><%= @event.address %></p>
+		<p><b>Estado: </b><%= @event.status %></p>
 		
 		<p><b>Fecha y hora de inicio: </b><%=l @event.start_time %></p>
 
