--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,11 +21,19 @@
 		</div>
 		
 		<div class="field">
-			<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic" %>
-		</div>
-		
-		<div class="field">
 			<%= f.text_area :address, :placeholder => "Lugar y/o dirección", :class => 'form-control',autofocus: true   %>
+		</div>
+
+		<div class="field">
+			<% if orden == "Actualizar" %>
+				<%= f.select(:status, [['Vigente', 'Vigente'], ['Caducado', 'Caducado']], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
+			<% else %>
+				<p><b>Estado: </b> Disponible </p>
+			<% end %>
+		</div>
+
+		<div class="field">
+			<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic" %>
 		</div>
 
 		<div class="field">
