--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -26,12 +26,27 @@
 				</div>
 				<%= error_span(@request[:title]) %>
 			</div>
-			
+
+			<% if accion == "Actualizar" %>
+				<%= f.select(:status, [['Disponible', 'Disponible'],['En proceso', 'En proceso'],['Realizado','Realizado'], ['Cancelado','Cancelado'], ['Caducado', 'Caducado']], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
+			<% else %>
+				<p><b>Estado: </b> Disponible </p>
+			<% end %>
+
 			<div class="control-group">
 				<div class="field">
-				<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic" %>
+				<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic", :class => 'form-control' %>
 				</div>
 				<%= error_span(@request[:description]) %>
+			</div>
+
+			<div class="field">
+				<p><%= f.label :start_time, "Fecha de inicio" %>
+				<%= f.datetime_select :start_time %></p>
+			</div>
+			<div class="field">
+				<p><%= f.label :end_time, "Fecha de término" %>
+				<%= f.datetime_select :end_time %></p>
 			</div>
 			
 		</div>
