Modificaciones que quedaron pendientes, de estilo

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -35,9 +35,9 @@
 	color: white;
 	font-weight: bold;
 }
-.btn:visited, .btn a:visited
+.btn:visited, .btn a:visited, .btn:focus, .btn a:focus
 {
-	color: white;
+ color: white;
 }
 /*COMPORTAMIENTO*/
 .btnCRUD
