--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
 
 	<footer>
 		<!--Pie de página-->
-		<div  id="pies" class = "navbar-default ">
+		<div  id="pies" class = "navbar-default pies">
 			REASE - Red Nacional de Aprendizaje y Servicio
 			<br>
 			Contacto: reasechile@gmail.com
