crud validado segun categoría y creador completamente funcionando

--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -21,7 +21,7 @@
 			<%= f.text_field :name, :class => 'form-control', :placeholder => 'Nombre' %>
 		</div>
 		<div class="field">
-			<%= f.text_field :web,  :class => 'form-control', :placeholder => 'Página web' %>
+			<%= f.text_field :web,  :class => 'form-control', :placeholder => 'Página web. Ejemplo: http://www.ejemplo.com' %>
 		</div>
 		<div class="field">
 			<%= f.file_field :logo %>
