--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -21,8 +21,8 @@
 	</div>
 </div>
 
-<% if user_signed_in? %>
-	<% if @request.user.id == current_user.id %>
+<% if user_signed_in? && current_user.category != 2 %>
+	<% if @request.user.id == current_user.id || current_user.category == 1 %>
 		<%= link_to 'Editar ', edit_request_path(@request), :class => "btn btn-lg btnCRUD" %>
 		<%= link_to t('Eliminar'), request_path(@request),:method => 'delete',
 		:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => '¿Está seguro de eliminar la solicitud?')) }, :class => "btn btn-lg btnCRUD"%>
