Se agregan tildes que faltaban en botones, y se cambia el nombre de 'editar o crear sección' por 'trabajar sección'

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -4,16 +4,16 @@
 <p>Todos los campos que serán requeridos al momento de crear o editar una sección son obligatorios.</p>
 <p>Para editar una seccion haga click en alguno de los siguientes btnes: </p>
 
-<%= link_to "Editar o crear Novedad", sections_novedades_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar Novedad", sections_novedades_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Editar o crear ¿Qué es A+S?", sections_aprendizaje_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar ¿Qué es A+S?", sections_aprendizaje_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Editar ¿Qué hacemos?", sections_hacemos_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar ¿Qué hacemos?", sections_hacemos_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Editar ¿Quienes somos?", sections_somos_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar ¿Quiénes somos?", sections_somos_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Editar o crear Editar Estatutos", sections_estatutos_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar Editar Estatutos", sections_estatutos_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Editar o Agregar Institución", institutions_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar Institución", institutions_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Modificar links de interés", sections_linkInteres_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Trabajar links de interés", sections_linkInteres_path, class:"btn btn-lg btnAdmin"%>
