--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<h1>Nuevo miembro</h1>
 <p><%= devise_error_messages! %></p>
 <!--h1 class="text-center login-title">Ingrese sus datos para conectarse a REASE</h1-->
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name),  html: {class: 'form'}) do |f| %>
