--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -33,7 +33,7 @@
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
-					<%= link_to 'Contacto <i class="glyphicon glyphicon-envelope"></i>'.html_safe, presentation_contacto_path %>
+					<%= link_to 'Contacto <i class="glyphicon glyphicon-envelope"></i>'.html_safe, contacts_path %>
 				</li>
 			</ul>
 			<p class="navbar-text navbar-right">Miembros activos: <%= User.count %> </p>
