--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -15,6 +15,7 @@
 <div class="panel panel-default panelRease" >
     <div class="panel-heading">Datos del evento</div>
     <div class="panel-body">
+    <p class="note">*Todos los campos son obligatorios.</p>
 
 		<div class="field">
 			<%= f.text_field :title, :placeholder => "Nombre del evento" , :class => 'form-control',autofocus: true %>
