--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -15,7 +15,7 @@
 <div class="panel panel-default panelRease" >
     <div class="panel-heading">Datos de la oferta</div>
     <div class="panel-body">
-
+	<p class="note">*Todos los campos son obligatorios.</p>
 		<div class="field">
 			<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo'%>
 		</div>
