--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -19,7 +19,7 @@
 	<div class="panel panel-default panelRease" >
     	<div class="panel-heading">Datos de la solicitud</div>
     	<div class="panel-body">
-    		
+    		<p class="note">*Todos los campos son obligatorios.</p>
     		<div class="control-group">
 				<div class="field">
 				<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo' %>
