--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -8,6 +8,7 @@
 					<p><%= mensaje%></p>
 				</div>
 			<%end%>
+			<p class="note">*Todos los campos son obligatorios.</p>
 			<div class="field">
 				<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo' %>
 			</div>
