--- a/app/views/contact_mailer/contact_receiver.html.erb
+++ b/app/views/contact_mailer/contact_receiver.html.erb
@@ -10,13 +10,14 @@
 				Contacto para REASE
 		</div>
 		<div class="panel-body">
-			<p>Muy buenos días, el señor(a)  <strong><%= @contact.name %></strong> se ha comunicado con usted entregando los siguientes datos: </p>
+			<p>El señor(a)  <strong><%= @contact.name %></strong> se ha comunicado con rease entregando los siguientes datos: </p>
 			<p><strong>Mail:</strong> <%= @contact.email %></p>
 			<p><strong>Comentario:</strong></p>
 			<p> <%= @contact.body %></p>
 		</div>
 		<div class="panel-footer">
-			<p>Red Nacional de aprendizaje y servicio.</p>
+			<br><br>
+			<p><strong>Red Nacional de aprendizaje y servicio.</strong></p>
 			<p>coordinacion.rease@gmail.com</p>
 		</div>
 	</div>   
