--- a/app/views/contact_mailer/contact_sender.html.erb
+++ b/app/views/contact_mailer/contact_sender.html.erb
@@ -10,13 +10,15 @@
 				Contacto para REASE
 			</div>
 			<div class="panel-body">
-				<p>Muy buenos días, <strong><%= @contact.name %></strong>, usted se ha comunicado con REASE con los siguientes datos: </p>
+				<p>Hola, <strong><%= @contact.name %></strong>, usted se ha comunicado con REASE con los siguientes datos: </p>
 				<p><strong>Mail:</strong> <%= @contact.email %></p>
 				<p><strong>Comentario:</strong></p>
 				<p> <%= @contact.body %></p>
 			</div>
 			<div class="panel-footer">
-				<p>Red Nacional de aprendizaje y servicio.</p>
+				<br><br>
+				<p>Muchas gracias por contactarse con nostros, intentaremos contestarle a la brevedad</p><br>
+				<p><strong>Red Nacional de aprendizaje y servicio.</strong></p>
 				<p>coordinacion.rease@gmail.com</p>
 			</div>
 		</div>   
