--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -5,6 +5,7 @@
 	<div class="panel-body">
 		<p>
 		Si quiere unirse a nuestra organización, tiene sugerencias que hacer o simplemente tiene interés y quiere saber más sobre Aprendizaje y Servicio, por favor no dude en contactarse.
+		<p class="note">*Todos los campos son obligatorios.</p>
 		<%= form_for(@contact) do |f| %>
 			<% if @contact.errors.any? %>
 			<div id="error_explanation">
