--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,20 +1,21 @@
+<h1>Mensaje Enviado</h1>
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
 		Contacto para REASE
 </div>
 <div class="panel-body">
 	<p>
-	  <strong>Name:</strong>
+	  <strong>Nombre:</strong>
 	  <%= @contact.name %>
 	</p>
 
 	<p>
-	  <strong>Email:</strong>
+	  <strong>Correo electrónico:</strong>
 	  <%= @contact.email %>
 	</p>
 
 	<p>
-	  <strong>Body:</strong>
+	  <strong>Comentario:</strong>
 	  <%= @contact.body %>
 	</p>
 </div>
