--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,7 @@
 				<p>Es por esto que se le pide a cada nuevo miembro de la red, dé su concentimiento para que pueda ser evaluado en las actividades que realice a nombre de REASE. </p>
 				<p>Además, así como se le evalúa a usted, usted deberá evaluar a otros miembros.
 				De no aprobar éste requisito, usted no podrá registarse en la Red.</p>
+				<p class="note">*Todos los campos son obligatorios.</p>
 			</div>
 		</div>
 	</div>
@@ -21,6 +22,7 @@
 	<div class="panel panel-default panelRease" >
 		<div class="panel-heading">Datos personales</div>
 		<div class="panel-body">
+
 		
 
 			<div class="field">
