--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Hola <%= @resource.email %>!</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>Usted ha pedido un cambio de contraseña. Esto lo podrá realizar en el siguiente link.</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to 'Cambiar contraseña', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>Si usted no ha pedido este cambio, por favor ignore este correo.</p>
+<p>Su contraseña no cambiara hasta que usted lo desee y se conecte nuevamente.</p>
