--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Resend confirmation instructions</h2>
+<h1>Reenviar instrucciones de confirmación</h1>
+<p>Si usted no ha recibido aún las instrucciones de confirmación de cuenta, puede reenviarlas acá.</p>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	<%= devise_error_messages! %>
+	<div class="panel panel-default  panelRease">
+		<div class="panel-heading">
+			Ingrese los datos.
+		</div>
+		<div class="panel-body">
+			<div class="field">
+			<%= f.email_field :email, class: 'form-control', autofocus: true, placeholder: 'Ingrese su correo electrónico' %>
+			</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
+			<%= f.submit "Reenviar", class:'btn btn-lg' %>
+			<%= render "devise/shared/links" %>
+		</div>
+	</div>
 <% end %>
-
-<%= render "devise/shared/links" %>
