--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -18,11 +18,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "off",:class => 'form-control', :placeholder => 'Confirme la contraseña' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Cambiar mi contraseña", :class => 'btn btn-lg btnCRUD' %>
-  </div>
+  <%= f.submit "Cambiar contraseña", :class => 'btn btn-lg' %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<p><%= render "devise/shared/links" %></p>
 </div>
 </div>
+
