--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,22 @@
-<h1 class="tituloSesion">¿Olvidó su contraseña?</h1>
-<h2 class="tituloSesion"> Ingrese su mail para recibir instrucciones de recuperación de contraseña<h2>
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: 'form-signin', method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<h1 >¿Olvidó su contraseña?</h1>
+	<p> Ingrese su mail para recibir instrucciones de recuperación de contraseña<p>
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post }) do |f| %>
+		<%= devise_error_messages! %>
+		<div class="panel panel-default  panelRease">
+			<div class="panel-heading">
+				Ingrese su correo electrónico
+			</div>
+			<div class="panel-body">
+				<div class="field">
+				<%= f.email_field :email, :class => 'form-control', :placeholder => 'Correo electrónico' %>
+				</div>
 
-  <div class="field">
-    <%= f.email_field :email, :class => 'form-control', :placeholder => 'Correo electrónico' %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit "Recuperar contraseña", :class => 'btn btn-lg btn-block' %>
-  </div>
-	 <!--%= render "devise/shared/links" %-->
-<% end %>
+				<%= f.submit "Recuperar contraseña", :class => 'btn btn-lg' %>
+				<% end %>
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+
+
+
 
