--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
 				<p><%= f.label :category, "Rol de usuario" %>
 				<button type="button" class="btn btn-default btnWhite" id:"btnTipoUsuario"  data-trigger="focus" data-container="body" data-toggle="btnRolUsuario"> ? </button></p>
 
-				<%= f.select(:category, [['Docente', 2],['Vinculador Social', 3],['Socio comunitario', 4]], {:include_blank => '-- Seleccione una Opción --' }, { :class => 'form-control', :required => true }) %>
+				<%= f.select(:category, [['Profesor', 2],['Vinculador Social', 3],['Socio comunitario', 4]], {:include_blank => '-- Seleccione una Opción --' }, { :class => 'form-control', :required => true }) %>
 			</div>
 
 
@@ -80,7 +80,7 @@
 		
 			<div class="actions">
 				<%= f.submit "Aceptar y Enviar Fomulario", :class => 'btn btn-lg btnCRUD'%>
-				<%= link_to "Salir", root_path, :class => 'btn btn-lg btnCRUD' %>
+				<%= link_to "Cancelar", root_path, :class => 'btn btn-lg btnCRUD' %>
 			</div>
 
 		</div>
@@ -101,7 +101,7 @@ $(function () {
   $('[data-toggle="btnRolUsuario"]').popover(
   {
   	html: 'true', 
-    content: '<p><b>Docente:</b> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><b>Socio comunitario:</b> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el docente.</p><p><b>Vinculador social: </b> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S.</p>'
+    content: '<p><b>Profesor:</b> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><b>Socio comunitario:</b> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el docente.</p><p><b>Vinculador social: </b> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S.</p>'
   }
   	)
 })
