--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,15 +39,15 @@
 		
 
 			<div class="field">
-				<%= f.text_field :name, :placeholder => "Nombres",:class => 'form-control',autofocus: true  %>
+				<%= f.text_field :name, :placeholder => "Nombres",:class => 'form-control'  %>
 			</div>
 
 			<div class="field">
-				<%= f.text_field :last_name, :placeholder => "Apellidos",:class => 'form-control',autofocus: true  %>
+				<%= f.text_field :last_name, :placeholder => "Apellidos",:class => 'form-control'  %>
 			</div>
 
 			<div class="field">
-				<%= f.email_field :email, :placeholder => "Correo electrónico",:class => 'form-control',autofocus: true  %>
+				<%= f.email_field :email, :placeholder => "Correo electrónico",:class => 'form-control' %>
 			</div>
 
 			<div class="field"> <!--aun no sé como agregar el valor de minimo al placeholder-->
@@ -114,11 +114,8 @@ $(function () {
   $('[data-toggle="btnRolUsuario"]').popover(
   {
   	html: 'true', 
-<<<<<<< HEAD
     content: '<p><b>Profesor:</b> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><b>Socio comunitario:</b> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el docente.</p><p><b>Vinculador social: </b> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S.</p>'
-=======
-    content: '<p><b>Profesor:</b> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><b>Socio comunitario:</b> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el profesor.</p><p><b>Vinculador social: </b> Actúa como intermediario entre el profesor y el socio comunitario para realizar la actividad de A+S.</p>'
->>>>>>> develop
+
   }
   	)
 })
