Acceso a perfiles de otros usuarios y el propio

--- a/app/views/events/listado.html.erb
+++ b/app/views/events/listado.html.erb
@@ -13,9 +13,9 @@
     </div>
 
     <div class="panel-footer">
-      <p><b>Creador:</b> <%= event.user.name %> <%= event.user.last_name %><p>
-      <p><b>Fecha y hora de inicio: </b><%=l event.start_time %></p>
-      <p><b>Fecha y hora de término: </b><%=l event.end_time %></p>
+      <p><strong>Creador:</strong><%= link_to event.user.name+' '+event.user.last_name, user_path(event.user.id)  %></p>
+      <p><strong>Fecha y hora de inicio: </strong><%=l event.start_time %></p>
+      <p><strong>Fecha y hora de término: </strong><%=l event.end_time %></p>
       <%= link_to "Ver evento", event %>
     </div>
   </div>
