--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -11,9 +11,9 @@
     <h1> Información </h1>
       <p><strong>Estado: </strong><%= @offering.status %></p>
 
-      <p><strong>Fecha y hora de inicio: </strong><%=l @offering.start_time %></p>
+      <p><strong>Fecha de inicio: </strong><%=l @offering.start_time %></p>
 
-      <p><strong>Fecha y hora de término: </strong><%=l @offering.end_time %></p>
+      <p><strong>Fecha de término: </strong><%=l @offering.end_time %></p>
   </div>
   <div class="panel-footer">
     <p><strong>Creado por:</strong>
