--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -106,7 +106,7 @@ $(function () {
   $('[data-toggle="btnTipoUsuario"]').popover(
   {
   	html: 'true', 
-    content: '<p><b>Activo:</b> Recibirá bimensualmente las actas de reuniones, invitaciones a todos los eventos y actividades de la Red y tendrá que participar en las reuniones de ampliadas y comisiones de trabajo de REASE.</p><p><b>Adherente:</b> Recibirá semestralmente los avances de la Red e invitaciones a eventos masivos, así como invitaciones a eventos masivos de REASE.</p>'
+    content: '<p><strong>Activo:</strong> Recibirá bimensualmente las actas de reuniones, invitaciones a todos los eventos y actividades de la Red y tendrá que participar en las reuniones de ampliadas y comisiones de trabajo de REASE.</p><p><strong>Adherente:</strong> Recibirá semestralmente los avances de la Red e invitaciones a eventos masivos, así como invitaciones a eventos masivos de REASE.</p>'
   }
   	)
 })
@@ -114,7 +114,7 @@ $(function () {
   $('[data-toggle="btnRolUsuario"]').popover(
   {
   	html: 'true', 
-    content: '<p><b>Profesor:</b> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><b>Socio comunitario:</b> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el docente.</p><p><b>Vinculador social: </b> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S.</p>'
+    content: '<p><strong>Profesor:</strong> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de A+S.</p><p><strong>Socio comunitario:</strong> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de A+S, como cumplir con los acuerdos con el docente.</p><p><strong>Vinculador social: </strong> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S.</p>'
 
   }
   	)
