--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -29,7 +29,7 @@
 			<% if orden == "Actualizar" %>
 				<%= f.select(:status, [['Vigente', 'Vigente'], ['Caducado', 'Caducado']], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
 			<% else %>
-				<p><b>Estado: </b> Vigente </p>
+				<p><strong>Estado: </strong> Vigente </p>
 			<% end %>
 		</div>
 
