--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -30,7 +30,7 @@
 			<% if accion == "Actualizar" %>
 				<%= f.select(:status, [['Disponible', 'Disponible'],['En proceso', 'En proceso'],['Realizado','Realizado'], ['Cancelado','Cancelado'], ['Caducado', 'Caducado']], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
 			<% else %>
-				<p><b>Estado: </b> Disponible </p>
+				<p><strong>Estado: </strong> Disponible </p>
 			<% end %>
 
 			<div class="control-group">
@@ -42,11 +42,11 @@
 
 			<div class="field">
 				<p><%= f.label :start_time, "Fecha de inicio" %>
-				<%= f.datetime_select :start_time %></p>
+				<%= f.date_select :start_time %></p>
 			</div>
 			<div class="field">
 				<p><%= f.label :end_time, "Fecha de término" %>
-				<%= f.datetime_select :end_time %></p>
+				<%= f.date_select :end_time %></p>
 			</div>
 			
 		</div>
