--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -8,16 +8,16 @@
 		<p><%=raw @request.description %></p>
 
 		<h2> Información </h2>
-			<p><b>Estado: </b><%= @request.status %></p>
+			<p><strong>Estado: </strong><%= @request.status %></p>
 
-			<p><b>Fecha y hora de inicio: </b><%=l @request.start_time %></p>
+			<p><strong>Fecha de inicio: </strong><%=l @request.start_time %></p>
 
-			<p><b>Fecha y hora de término: </b><%=l @request.end_time %></p>
+			<p><strong>Fecha de término: </strong><%=l @request.end_time %></p>
 	</div>
 	
 	<div class="panel-footer">
-		<p><b>Creado por:</b>
-		<%= link_to @offering.user.name+' '+@offering.user.last_name, user_path(@offering.user.id)  %></p>
+		<p><strong>Creado por:</strong>
+		<%= link_to @request.user.name+' '+@request.user.last_name, user_path(@request.user.id)  %></p>
 	</div>
 </div>
 
