perfil de usuario editable

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -5,6 +5,11 @@
 */
 
 /*link básicos estilos rease*/
+.RoundPicture
+{
+	border-radius: 50%;
+}
+
 a, a:focus, a:active, a:visited 
 {
 	color: #30aaaa;	
