--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -17,7 +17,15 @@
   </div>
   <div class="panel-footer">
     <p><strong>Creado por:</strong>
-      <%= link_to @offering.user.name+' '+@offering.user.last_name, user_path(@offering.user.id)  %></p>
+      <%if @offering.user.nickname.blank?%>
+        <%= link_to @offering.user.name+' '+@offering.user.last_name, user_path(@offering.user.id)  %>
+      <%else%>
+        <%= link_to @offering.user.nickname, user_path(@offering.user.id) %>
+      <%end%>
+      <%if !@offering.user.photo.blank?%>
+        <%= image_tag @offering.user.photo.url(:mini), :class =>"RoundPicture" %>
+      <%end %>
+      <p>
   </div>
 </div>
 
