--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,58 @@
-<h1>Editar <%= resource_name.to_s.humanize %></h1>
+<h1>Editar Perfil</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-signin', method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
+  <!--MAIL-->
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+  <div class="panel panel-default panelRease">
+    <div class="panel-heading">
+      Datos de <%=@user.name%>
+    </div>
+    <div class="panel-body">
+      <h2>Modificar contraseña</h2>
+      <div class="field">
+        <%= f.password_field :password, autocomplete: "off", :class => 'form-control', :placeholder => 'Nueva Contraseña (Dejar en blanco si no desea cambiarla)' %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control', :placeholder => 'Confirmar contraseña' %>
+      </div>
+
+      <hr>
+      <h2>Modificar datos personales</h2>
+      <div class="field">
+        <%= f.text_field :nickname, :class => 'form-control', :placeholder => 'Apodo o nickname' %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :name, :class => 'form-control', :placeholder => 'Nombres' %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :last_name, :class => 'form-control', :placeholder => 'Apellidos' %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_area :description, :class => 'form-control', :placeholder => 'Anote aquí algo sobre usted' %>
+      </div>
+
+      <hr>
+      <h2>Foto de perfil</h2>
+      <div class="field">
+        <%= f.file_field :photo, :placeholder => 'Foto de Perfil' %>
+      </div>
+
+      <hr>
+      <h2>Agregar contraseña actual para aceptar cambios</h2>
+      <div class="field">
+        <%= f.password_field :current_password, autocomplete: "off", :class => 'form-control', :placeholder => 'Contraseña antigua para confirmar cambio' %>
+      </div>
+        <%= f.submit "Actualizar Perfil", :class=>"btn btn-lg btnCRUD" %>
+        <%= link_to 'Cancelar cambios', :back, :class =>"btn btn-lg btnCRUD" %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "¿Está seguro que desea cerrar su cuenta?" }, method: :delete %></p>
-
-<%= link_to "Volver", :back %>
