Administrador capaz de cambiar niveles de autorizacion de otros usuarios

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -163,3 +163,30 @@ p.navbar-text.navbar-right
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
+
+#test {
+    position: relative;
+}
+
+#test .wrapper {
+    opacity: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+}
+
+#test .wrapper:hover {
+    opacity: 0.5;
+}
+
+#test #user_photo {
+    background-color: #ccc;
+    border: none;
+    color: #666;
+    padding: 3px 5px;
+    border-radius: 5px;
+    position: relative;
+    top: 0;
+    z-index: 1;
+}
