--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,8 +44,10 @@
       </div>
       <hr>
       <h2>Foto de perfil</h2>
-      <div class="field">
-        <%= f.file_field :photo, :placeholder => 'Foto de Perfil' %>
+      <div id="test">
+        <div class="wrapper">
+          <%= f.file_field :photo %>
+        </div>
       </div>
 
       <hr>
