--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,3 +2,6 @@
 
 <%= render 'partials/profile' %>
 <%= link_to "Editar Perfil", edit_user_registration_path, :class=>'btn btn-lg btnCRUD'%>
+<%if @user.category==1%>
+	<%= link_to "Cambiar Tipo de Usuario", edit_user_path(@user), :class=>'btn btn-lg btnCRUD'%>
+<%end%>
