--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Página de perfil</h1>
 
 <%= render 'partials/profile' %>
+
+<%if current_user.category==1%>
+	<%= link_to "Cambiar Tipo de Usuario", edit_user_path(@user), :class=>'btn btn-lg btnCRUD'%>
+<%end%>
