Se habilita vista de todos los usuarios registrados, solo para el administrador

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,12 +44,11 @@
       </div>
       <hr>
       <h2>Foto de perfil</h2>
-      <div id="test">
-        <div class="wrapper">
+      <id="test">
+ 
           <%= f.file_field :photo %>
-        </div>
-      </div>
-
+ 
+      </id="test">
       <hr>
       <h2>Agregar contraseña actual para aceptar cambios</h2>
       <div class="field">
